<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <string name="app_name">Find Restaurant</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_title">Find Restaurant</string>
    <string name="title_activity_search_opions">SearchOpionsActivity</string>

    <!-- General Usage/通用 -->
    <string name="search">Search</string>
    <string name="favoritelist">My Favorite</string>
    <string name="AllCatagory">All Catagory</string>
    <string name="NewCatagory">New Catagory</string>
    <string name="Update">UPDATE</string>
    <string name="Save">SAVA</string>
    <string name="Add">Add</string>
    <string name="info">Detail</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="ActSelection">Want to?</string>
    <string name="LocatingFailed">Locating Failed</string>
	<string name="GoogleSearch">Google Search</string>
	
	<!-- Navigation/Location Relative -->
    <string name="Distance">Distance</string>
	<string name="Latitude">Latitude</string>
	<string name="Longitude">Longitude</string>
    <string name="OpenGPS">Open GPS</string>
	<string name="NavigateFail">Navigation Not Available</string>
    <string name="Meter">Meter</string>
    
    <!-- Form,Label;表單,標籤-->
    <string name="nearPlace">Nearby Location</string>
    <string name="searchLocation">Search Place</string>
    <string name="AddSuccess">Added</string>
    <string name="AddFailed">Added Failed</string>
    <string name="UpdateSuccess">Updated</string>
    <string name="UpdateFailed">Updated Failed</string>
    <string name="DeleteSuccess">Deleted</string>
    <string name="DeleteFailed">Deleted Failed</string>
    <string name="CatagoryRequired">Catagory Required</string>
    <string name="NameRequired">Name Required</string>
    <string name="LocationNow">Present Place</string>
	<string name="Name">Name</string>
	<string name="Note">Note</string>
	
	<string name="RestName">Rest. Name:</string>
	<string name="AddressWithTap">Address (Click for Navigation):</string>
	<string name="PhoneWithTap">Phone (Click for dialing):</string>
	

	<!-- Options label/選項名稱 -->
    <string name="city">City</string>
    <string name="dist">District</string>
    <string name="road">Road/Lane</string>
    <string name="OptionHint">Type here or click "Tap Me" to get help</string>
    <string name="OptionSel">Select Options</string>
	

    <!-- from other place -->
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Your Nearest Places</string>
    <string name="title_activity_index">Restaurant Search</string>
    <string name="title_activity_main_activity2">Search Bar</string>
</resources>
