<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:gravity="center"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/tvOpt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="#55aa77"
                android:padding="5sp"
                android:text="@string/OptionSel"
                android:textSize="16sp" />
            <!--
		    <Button
		        android:id="@+id/tvLocation"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/LocationNow"
		        android:textSize="16sp"
		        android:padding="5sp"
		        android:layout_alignRight="@id/tvOpt"
		        />
            -->
        </RelativeLayout>

        <EditText
            android:id="@+id/etOpt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/OptionHint"
            android:lines="2" />

        <Button
            android:id="@+id/tvOptSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#dc1111"
            android:onClick="submitSearch"
            android:padding="3sp"
            android:text="@string/search" />
    </LinearLayout>

</RelativeLayout>