<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/menuHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:gravity="center"
         >
        <TextView
            android:id="@+id/tvMenu1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/search"
            android:clickable="true"
            android:onClick="menu1"
            />
        <TextView 
            android:id="@+id/tvMenu2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/favoritelist"
            android:clickable="true"
            android:onClick="menu2"
            />
    </LinearLayout>

    <ViewFlipper
        android:layout_below="@id/menuHead"
        android:id="@+id/flipperMenu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       	>
        <RelativeLayout
            android:id="@+id/menuFrame1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FF9933"
            >
            <LinearLayout
		        android:layout_centerInParent="true"
		        android:orientation="vertical"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		         >
	      		<TextView
		            android:id="@+id/menuTvNear"
		            android:text="@string/nearPlace"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_margin="5sp"
		            android:textSize="20sp"
		            android:background="@drawable/mainpagemenu"
		            android:clickable="true"
		            android:onClick="nearPlace"
		            />
		        <TextView
		            android:id="@+id/menuTvLoc"
		            android:text="@string/searchLocation"
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_margin="5sp"
		            android:textSize="20sp"
		            android:background="@drawable/mainpagemenu"
		            android:clickable="true"
		            android:onClick="location"
		            />
		    </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/menuFrame2"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 >
                <ImageView
                    android:id="@+id/addFavorite"
                    android:clickable="true"
                    android:onClick="addFavorite"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/addsign"
                     />
	            <Spinner
	                android:layout_toLeftOf="@id/addFavorite"
			        android:id = "@+id/menuListCatagory"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:paddingLeft="5sp"
			        android:paddingRight="5sp"
			        />
            </RelativeLayout>
			<ExpandableListView
			    android:id = "@id/android:list"
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:background="#333333"/>
        </LinearLayout>
    </ViewFlipper>

</RelativeLayout>